WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202097
AudioTrackPrivateMediaStreamCocoa does not need to manipulate the audio unit in play/pause methods
https://bugs.webkit.org/show_bug.cgi?id=202097
Summary
AudioTrackPrivateMediaStreamCocoa does not need to manipulate the audio unit ...
youenn fablet
Reported
2019-09-22 23:38:01 PDT
AudioTrackPrivateMediaStreamCocoa does not need to manipulate the audio unit in play/pause methods
Attachments
Patch
(4.80 KB, patch)
2019-09-22 23:41 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.50 KB, patch)
2019-09-23 07:23 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.79 KB, patch)
2019-09-23 23:28 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-09-22 23:41:01 PDT
Created
attachment 379357
[details]
Patch
youenn fablet
Comment 2
2019-09-23 02:52:08 PDT
<
rdar://problem/51548144
>
Eric Carlson
Comment 3
2019-09-23 06:06:27 PDT
Comment on
attachment 379357
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=379357&action=review
> Source/WebCore/platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.h:89 > + bool m_isTransitioningToPausing { false }; > + bool m_isTransitioningToPlaying { false };
Couldn't we replace these with an enum? In a case where both are set simultaneously, wouldn't we always want the last one set to always "win"?
youenn fablet
Comment 4
2019-09-23 07:23:54 PDT
Created
attachment 379369
[details]
Patch
youenn fablet
Comment 5
2019-09-23 07:24:24 PDT
> Couldn't we replace these with an enum? In a case where both are set > simultaneously, wouldn't we always want the last one set to always "win"?
I tried to come up with a new approach without any transition values.
Eric Carlson
Comment 6
2019-09-23 07:44:43 PDT
Comment on
attachment 379369
[details]
Patch Nice approach! r=me once the bots are happy.
youenn fablet
Comment 7
2019-09-23 23:28:08 PDT
Created
attachment 379433
[details]
Patch
youenn fablet
Comment 8
2019-09-24 00:55:58 PDT
(In reply to youenn fablet from
comment #7
)
> Created
attachment 379433
[details]
> Patch
Added some logging in case of failing to start the audio unit.
WebKit Commit Bot
Comment 9
2019-09-24 01:42:10 PDT
Comment on
attachment 379433
[details]
Patch Clearing flags on attachment: 379433 Committed
r250290
: <
https://trac.webkit.org/changeset/250290
>
WebKit Commit Bot
Comment 10
2019-09-24 01:42:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug